Update readme to v1.2

--- a/HexxatFriendship/HexxatFriendship-readme-english.html
+++ b/HexxatFriendship/HexxatFriendship-readme-english.html
@@ -314,7 +314,7 @@
 
           <a href="http://www.spellholdstudios.net/ie/npciep">Mod Website</a> &#8226;
           <a href="">Mod Forum</a> &#8226;
-          Version: 1.1
+          Version: 1.2
         </p>
         <hr />
         <p class="menu">
@@ -393,6 +393,7 @@
           <span class="t1">Concept and writing:</span> <span class="t2">Lava Del'Vortel</span><br />
           <span class="t1">Proofreader:</span> <span class="t2">Dalmir_The_Dark</span><br />
           <span class="t1">Additional text clean-up:</span> <span class="t2">hook71</span><br />
+          <span class="t1">Russian translation:</span> <span class="t2">Jarly</span><br />
 
           <hr class="floatfix" /><br>
           <h5>Programs/tools used in creation:</h5><br />
@@ -430,6 +431,11 @@
           <h6>Version 1.1 (October, 2022)</h6>
           <ul>
             <li>Additional text clean-up by hook71.</li>
+          </ul>
+          
+          <h6>Version 1.2 (July, 2024)</h6>
+          <ul>
+            <li>Russian translation by Jarly.</li>
           </ul>
           
           <br>
